RealDataSet: asymmetric error-bar surface via DataSetError
Phase 1 of wiring the periodogram's chi-squared confidence interval
into the PSD chart. Dataset side only; estimator side comes next.

RealDataSet implements DataSetError. Two modes chosen at construction:
symmetric (default, y is Real, radius reported both sides) or
asymmetric (y is Complex, re().getRad() = +err, im().getRad() = -err,
im().getMid() unused).

Public API preserved: getRealXValues, getRealYValues, getValues,
getTimes, getResolution, get, getDataCount, structure, close, toString,
set keep their existing signatures and semantics. The internal
RealMatrix data field is gone; storage is one Real x vector plus one
Real or Complex y vector. New accessors: getComplexYValues
(asymmetric only), getPositiveErrorValues, getNegativeErrorValues,
isAsymmetric, plus getErrorType / getErrorPositive / getErrorNegative.

Magnitude grows the element-array vector pattern that Real/Complex
already use: Magnitude[] elements, set(int, Magnitude), and an
elements-aware get(int). No FLINT vector op is called on Magnitude
vectors so contiguity is not required.

Real.rad() returns a strided Magnitude view over the radii of a Real
vector. dim == 1 returns getRad() directly; dim > 1 lazily builds an
element-array Magnitude whose get(i) aliases this.get(i).getRad().
No copy. Cached.

DEVELOPING.md and README.md: bump JDK 25 -> 26 to match pom + CLAUDE.md.

Tests: 816/816 green.